--- a/wine.ipynb
+++ b/wine.ipynb
@@ -261,13 +261,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X = np.c_[df.iloc[:, :-1].to_numpy(), np.ones(df.shape[0])]\n",
-    "y = df[\"quality\"].to_numpy()\n",
+    "# X = np.c_[df.iloc[:, :-1].to_numpy(), np.ones(df.shape[0])]\n",
+    "# y = df[\"quality\"].to_numpy()\n",
     "\n",
-    "X_train, X_tmp, y_train, y_tmp = train_test_split(X, y, test_size=0.4, random_state=42)\n",
-    "X_cv, X_test, y_cv, y_test = train_test_split(X_tmp, y_tmp, test_size=0.5, random_state=42)"
+    "# X_train, X_tmp, y_train, y_tmp = train_test_split(X, y, test_size=0.4, random_state=42)\n",
+    "# X_cv, X_test, y_cv, y_test = train_test_split(X_tmp, y_tmp, test_size=0.5, random_state=42)"
    ]
   },
   {
@@ -276,16 +276,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
+    "# from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "scaler = StandardScaler().fit(X_train)\n",
+    "# scaler = StandardScaler().fit(X_train)\n",
     "\n",
-    "X_train = scaler.transform(X_train)\n",
-    "X_cv = scaler.transform(X_cv)\n",
-    "X_test = scaler.transform(X_test)\n",
+    "# X_train = scaler.transform(X_train)\n",
+    "# X_cv = scaler.transform(X_cv)\n",
+    "# X_test = scaler.transform(X_test)\n",
     "\n",
-    "w = np.ones(X.shape[1]).reshape(-1, 1)\n",
-    "f = lambda X: np.matmul(X, w)"
+    "# w = np.ones(X.shape[1]).reshape(-1, 1)\n",
+    "# f = lambda X: np.matmul(X, w)"
    ]
   }
  ],
