--- a/wine.ipynb
+++ b/wine.ipynb
@@ -468,8 +468,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best score : 0.6857318741450069\n",
-      "Best parameters : {'criterion': 'entropy', 'n_estimators': 200}\n"
+      "Best score : 0.6845690834473325\n",
+      "Best parameters : {'criterion': 'log_loss', 'n_estimators': 200}\n"
      ]
     }
    ],
@@ -538,8 +538,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score, f1_score\n",
-    "\n",
     "clt = RandomForestClassifier(n_estimators=200, criterion='entropy')\n",
     "clt.fit(X_train, y_train)\n",
     "y_pred = clt.predict(X_test)"
@@ -554,12 +552,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy : 0.6372093023255814\n",
-      "F1-score : 0.6203341847622335\n"
+      "Accuracy : 0.6465116279069767\n",
+      "F1-score : 0.6297774848570442\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(f\"Accuracy : {accuracy}\")\n",
     "f1 = f1_score(y_test, y_pred, average='weighted')\n",
